# libdiscord-0.1

./: #install.sh#  .gitignore  CMakeLists.txt  README.md  daxe.c  discord.c  html.c  html.h  install.sh  json.c  json.h  libdiscord.c  libdiscord.h  libdiscordConfig.h.in  main.c  test-echo2.c  test.c  websockets.c  websockets.h
test-files/: README.md  lws-echoclient-annotated.c  ulfius-test.c
